# cancer_data

./: .gitignore  LICENSE.txt  README.md  process_ccle.ipynb  process_ccle.md  process_depmap.ipynb  process_depmap.md  process_gtex.ipynb  process_gtex.md  process_sanger.ipynb  process_sanger.md  process_tcga.ipynb  process_tcga.md  process_whippet.md  pyproject.toml  test.py  testing.ipynb
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-app.yml
cancer-data/: pyproject.toml
cancer_data/: .gitignore  __init__.py  access.py  checks.py  config.py  download.py  process.py  schema.csv  schema.txt  utils.py
cancer_data/processors/: ccle.py  depmap.py  gtex.py  other.py  tcga.py
docs/: CNAME  README.md  _sidebar.md  access.md  downloads.md  index.html  processing.md  removal.md
docs/favicon/: manifest.json
tests/: process_chunk.py  test_cancer_data.py
