[tool.poetry]
name = "cancer_data"
version = "0.3.0"
description = "Preprocessing for various cancer genomics datasets"
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/kevinhu/cancer_data"
repository = "https://github.com/kevinhu/cancer_data"
keywords = ["cancer", "data", "genomics"]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
gtfparse = "^1.2.0"
scipy = "^1.5.1"
requests = "^2.24.0"
tqdm = "^4.48.0"
tables = "^3.6.1"
xlrd = "^1.2.0"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
matplotlib = "^3.3.0"
seaborn = "^0.10.1"
jupyter = "^1.0.0"
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
poethepoet = "^0.9.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
format = 'poetry run black ./cancer_data'

[tool.poe.tasks]
black = "black ./cancer_data"
isort = "isort ./cancer_data"
format = ["black","isort"]
lint = "pylint ./cancer_data"